k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: <SERVICE_NAME>
  name: <SERVICE_NAME>
  namespace: prod
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: <SERVICE_NAME>
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: <SERVICE_NAME>
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: prod
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - name: <SERVICE_NAME>
          image: <IMAGE>
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: doppler-config
              mountPath: /app/.doppler
            - name: doppler-home
              mountPath: /home/nextjs/.doppler
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: doppler-config
          emptyDir: {}
        - name: doppler-home
          emptyDir: {}
      imagePullSecrets:
        - name: safetrekr-ghcr-token
