k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <SERVICE_NAME>
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '20m'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/limit-connections: '100'
    nginx.ingress.kubernetes.io/limit-rps: '200'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - safetrekr.com
        - www.safetrekr.com
      secretName: cloudflare-origin-tls
  rules:
    - host: safetrekr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <SERVICE_NAME>
                port:
                  number: 3000
